# stellarium

plugins/TelescopeControl/resources/: device_models.json
plugins/TelescopeControl/src/: CMakeLists.txt  TelescopeClient.cpp  TelescopeControlGlobals.hpp
plugins/TelescopeControl/src/AltAzGoTo/: AltAzGoToCommand.cpp  AltAzGoToCommand.hpp  AltAzGoToConnection.cpp  AltAzGoToConnection.hpp  AltAzGotoCommand.cpp  CMakeLists.txt  TelescopeClientDirectAltAzGoTo.cpp  TelescopeClientDirectAltAzGoTo.hpp
